# idlecore

./: Cargo.toml
src/: game.rs  lib.rs  main.rs  parse.rs  recipe.rs  resources.rs  state.rs
test/: copper.rs  copper.toml
